# cv_maker

./: .gitignore  compress_cv.py  main.py  pyproject.toml
