[tool.poetry]
name = "cv-maker"
version = "0.1.0"
description = ""
authors = ["pranjal <rktpranjal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.0"
reportlab = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
